<resources>
    <string name="app_name">Criket NZC</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Privacy Policy</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.ensivo.tradr.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon</string>

    <!--    chatspub-->
    <string name="facebook_app_id">1179901896003854</string>
    <string name="fb_login_protocol_scheme">fb1179901896003854</string>
    <string name="facebook_client_token">ecdc5898a84810dfc503507c514f9533</string>

    <!--    priti-->
    <!--    <string name="facebook_app_id">167136576091224</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb167136576091224</string>-->
    <!--    <string name="facebook_client_token">7fcf6765f0c25b454e42f10607e3f814</string>-->
    <!--    <string name="server_client_id">500072498444-39dsstsrg6si47t2p21ics3sulsk9jna.apps.googleusercontent.com</string>-->
    <string name="server_client_id">500072498444-k8vsluqe6oegto4urrf3629gv4f04lr2.apps.googleusercontent.com</string>


    <string name="basic_amount_to_start_chat">100</string>
    <!--    <string name="onesignal_app_id">d971b6f4-08e4-4a6b-bd33-3527790316d6</string>-->
    <string name="onesignal_app_id">11661d69-0153-4277-b363-eabedac5496c</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account?</string>
    <!--    <string name="already_have_an_account_login">Already have an account? <b><font color='#f7d868'>Login</font></b></string>-->
    <!--  <string name="don_t_have_an_account_register_now">Don\'t have an account?<font color='#f7d868'> Register Now </font></string>-->
    <!--    <string name="read_and_agree_to_terms_and_condition">Read and agree to <font color='#01C6DB'>Terms and Condition</font></string>-->
    <string name="register_now">Register Now</string>
    <string name="create_your_account_with_us">Create your account with us</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="home">Home</string>
    <string name="learn_stock_market_with_tradr">Learn </string>
    <string name="my_profile">My Profile</string>
    <string name="terms_and_conditions">
Read and agree to
<font color="#e6dc7d">Terms and Condition</font>

</string>
    <!--    <string name="hello"><font color='#A28532'> Hello, </font></string>-->
    <string name="hello">Hello, </string>
    <string name="login">Login</string>
    <string name="enter_mobile_number_to_sign_into_your_account">Enter mobile number to sign into your account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_mobile_number">Enter Mobile Number*</string>
    <string name="about_us">Gallery</string>
    <string name="faqs">FAQs</string>
    <string name="txt_continue">Continue</string>
    <string name="help_and_support">Help and Support</string>
    <!--    <string name="t_c">Terms and Conditions</string>-->
    <string name="t_c">Return &amp; Refund Policy</string>
    <string name="account_details">Account Details</string>
    <string name="user_name">User Name</string>
    <string name="enter_otp_txt">Enter OTP sent to\n</string>
    <string name="user_email">User995@gmail.com</string>
    <string name="search">Search..</string>
    <string name="top_most_strategies_to_reach_higher">Top Most Strategies To Reach Higher</string>
    <string name="we_provide_very_easy_to_execute_strategies_which_are_formed_in_a_step_wise_format">We provide very easy-to-execute strategies which are formed in a step-wise format</string>
    <string name="bajfinance_ai_system_that_makes_benefit">BajFinance AI system that makes benefit</string>
    <string name="by_setting_up_new_feeds_you_will_always_be_aware_of_changes_in_the_stock_market_and_will_be_able_to_make_decision_quickly">By setting up new feeds,you will always be aware of changes in the stock market and will be able to make decision quickly</string>
    <string name="learn_ins_and_out_of_stock_market_with_the_one_of_the_best_stock_markets_classes_in_nagpur">Learn Ins and Out of Stock Market with the one of the Best Stock Markets classes in Nagpur</string>
    <string name="stock_market">Stock Market</string>
    <string name="with">With</string>
    <string name="enter_email_id">Enter Email Id*</string>
    <string name="community_text_and_messages">Community Text &amp; Messages</string>
    <string name="resend_code">Resend Code\n</string>
    <string name="abhishek_mahankal_created_the_community_tradr_trading_academy_tap_to_view">Abhishek Mahankal created the community " " \"Tradr Trading Academy\".Tap to view.</string>
    <string name="see_community_info">See Community Info</string>
    <string name="admins_will_send_all_members_important_community_announcements_here">Admins will send all members important community announcements here</string>
    <string name="strategy">Our Strategy</string>
    <string name="strategy_menu">Matches</string>
    <string name="community">Home</string>
    <string name="qna">QNA</string>
    <string name="strategic">Strategic Video</string>
    <string name="strategies_to_learn_call_option">Strategies To Learn Call Option</string>
    <string name="equity_analyst">Equity Analyst</string>
    <string name="ai_system"> AI System</string>
    <string name="logic_based_questions">Logic Based Questions</string>
    <string name="basics">Basics</string>
    <string name="top_questions">Top Questions</string>
    <string name="courses"> Our Courses</string>
    <string name="courses_menu">More</string>
    <string name="tradr_trading_academy">Tradr Trading Academy</string>
    <string name="accurate_backtested_strategies">Accurate Backtested Strategies</string>
    <string name="update">Update</string>
    <string name="enter_full_name">Enter Full Name*</string>
    <string name="select_image_source">Select Source</string>
    <string name="abhishek_mahankal_is_the_man_behind_tradr"><b>Abhishek Mahankal</b> is the man behind TRADR.</string>
    <string name="featured_in_many_national_dailys_including_yahoo_finance_zee_business_out_look_hindustan_times_and_many_more_he_spread_the_word_about_teaching_finance_to_youngsters_and_guiding_their_way_to_stock_market_trading_with_a_unique_in_person_one_on_one_approach_on_the_tradr_trading_floor">Featured in many national dailys’ including <b>Yahoo Finance, Zee Business, Out Look, Hindustan Times</b> and many more, he spread the word about teaching finance to youngsters and guiding their way to stock market trading with a unique in-person one-on-one approach on the TRADR trading floor.</string>
    <string name="statement_one">Anyone can trade with <b>TRADR </b>, With over 8 years of experience with trading in the stock market, managing 3 brokerage firms and a complete passion and goal to motivate millions,</string>
    <string name="open_community">Open Community</string>
    <string name="close_community">Close Community</string>
    <string name="tradr">Tickets</string>
    <string name="notification">Notification</string>
    <string name="book_service_call">Service Call</string>
    <string name="buy_now">Buy Now</string>
    <string name="buy_the_course">Buy the Course</string>
    <string name="or">Or</string>
    <string name="contact_associate">Contact Associate</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="would_you_like_to_logout">Would you like to logout ?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="about_tradr_heading">About Tradr</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="intraday_work">Intraday Work</string>
    <string name="equity_strategy">Equity Strategy</string>
    <string name="_9_14_per_month_expectations">9-14% Per Month Expectations</string>
    <string name="we_got_featured_on_these_amp_more">We got featured on these &amp; more</string>
    <string name="live_trading">Live Trading</string>
    <string name="virtual_trading">Virtual Trading</string>
    <string name="some_of_the_superb_strategies">Some Of The Superb Strategies</string>
    <string name="performance_report">Performance Report</string>
    <string name="result_of_tradr_strategies">Result of tradr strategies</string>
    <string name="testimonial">Testimonial</string>
    <string name="baj_ai_strategy">Baj AI Strategy</string>
    <string name="equity_gold">Equity Gold</string>
    <string name="sniper_itc">Intraday</string>
    <string name="goat_writing">GOAT Writing</string>
    <string name="_2_hrs_option">2 Hrs Option</string>
    <string name="only_community_admins_can_send_messages">Only Community Admins Can Send Messages</string>
    <string name="practice_analyze_amp_trade_virtually"><![CDATA[Practice, Analyze & Trade Virtually.]]></string>
    <string name="trade_live_trade_with_our_guidance">Trade Live, Trade With Our Guidance.</string>
    <string name="ask_us_how">Ask Us How ?</string>
    <string name="videos_help_you_to_understand_tradr_strategies">Videos Help You To Understand Tradr Strategies</string>
</resources>