<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/community"
        android:icon="@drawable/comments"
        android:title="@string/community"
        app:tooltipText="@null" />
    <item
        android:id="@+id/strategy"
        android:icon="@drawable/target"
        android:title="@string/strategy_menu"
        app:tooltipText="@null" />
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="Join"
        app:tooltipText="@null" />
    <item
        android:id="@+id/tradr"
        android:icon="@drawable/rocket1"
        android:title="@string/tradr"
        app:tooltipText="@null" />
    <item
        android:id="@+id/courses"
        android:icon="@drawable/online_courses"
        android:title="@string/courses_menu"
        app:tooltipText="@null" />

</menu>