<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/asset_5">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230ssp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_50ssp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/asset_7" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear"
            android:layout_marginHorizontal="@dimen/_30ssp"
            android:layout_marginVertical="@dimen/_40ssp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/learn_stock_market_with_tradr"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stock_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5ssp"
                    android:background="@drawable/underline_text"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/stock_market"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/with"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25ssp" />

                <ImageView
                    android:layout_width="@dimen/_90ssp"
                    android:layout_height="@dimen/_35ssp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2ssp"
                    android:src="@drawable/tradr" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20ssp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/learn_ins_and_out_of_stock_market_with_the_one_of_the_best_stock_markets_classes_in_nagpur"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
