<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        tools:context="com.likesby.tradr.Activity.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/asset_37"
            android:orientation="vertical">


            <include
                android:id="@+id/progress_bar"
                layout="@layout/transparent_progress_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tool_bar"
                android:layout_marginHorizontal="@dimen/_5ssp"
                android:layout_marginBottom="@dimen/_25ssp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_24ssp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_30ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8ssp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/create_your_account_with_us"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_25ssp"
                    android:layout_marginVertical="@dimen/_10ssp"
                    android:background="@drawable/purple_stoke_background"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_30ssp"
                        android:layout_height="@dimen/_30ssp"
                        android:padding="@dimen/_4ssp"
                        android:src="@drawable/user_s" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5ssp"
                        android:background="@color/Transparent4"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/enter_full_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/dark_golden_2"
                        android:textColorHint="@color/dark_golden_1"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_25ssp"
                    android:layout_marginVertical="@dimen/_10ssp"
                    android:background="@drawable/purple_stoke_background"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5ssp"
                        android:src="@drawable/ic_email_24" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_8ssp"
                        android:background="@color/Transparent4"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/enter_email_id"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/dark_golden_2"
                        android:textColorHint="@color/dark_golden_1"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_25ssp"
                    android:layout_marginVertical="@dimen/_10ssp"
                    android:background="@drawable/purple_stoke_background"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5ssp"
                        android:src="@drawable/ic_call_24" />

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_8ssp"
                        android:background="@color/Transparent4"
                        android:clickable="false"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/dark_golden_2"
                        android:textColorHint="@color/dark_golden_1"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_17ssp">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/bright_golden" />

                    <TextView
                        android:id="@+id/t_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5ssp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_25ssp"
                    android:layout_marginVertical="@dimen/_10ssp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:background="@drawable/purble_button_bg"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/register_now"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5ssp"
                        android:layout_marginVertical="@dimen/_20ssp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/already_have_an_account_login"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_60ssp"
                        android:text="@string/login"
                        android:id="@+id/login_now"
                        android:textAlignment="center"
                        android:textColor="@color/dark_golden_2"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/txtNoDataImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/asset_11" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>