<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250ssp"
    android:background="@drawable/new_dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250ssp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:gravity="center"
            android:orientation="horizontal">



        </LinearLayout>

        <TextView
            android:id="@+id/txtGearType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginVertical="@dimen/_8ssp"
            android:text="@string/would_you_like_to_logout"
            android:textColor="@color/off_white"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/txtGearType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/btnYes"
                android:layout_width="@dimen/_100ssp"
                android:layout_height="@dimen/_45ssp"
                android:layout_weight="1"
                android:background="@drawable/selected"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="@dimen/_100ssp"
                android:layout_height="@dimen/_45ssp"
                android:layout_marginLeft="@dimen/_10ssp"
                android:layout_weight="1"
                android:background="@drawable/logout_selected"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
